src/objects/Twin_Object1__c.object
<CustomObject>
    <fields>
        <fullName>Twin_Object2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twin Object2</label>
        <referenceTo>Twin_Object2__c</referenceTo>
        <relationshipLabel>Twin Objects1</relationshipLabel>
        <relationshipName>Twin_Objects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>encryped__c</fullName>
        <label>encryped</label>
        <length>7</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>num__c</fullName>
        <label>num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt__c</fullName>
        <label>txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twin Object1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Twin Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twin Objects1</pluralLabel>
    <recordTypes>
        <fullName>record_typ1_for_twin_obj1</fullName>
        <active>true</active>
        <label>record typ1 for twin obj1</label>
    </recordTypes>
    <recordTypes>
        <fullName>recordtype2_for_twin_obj1</fullName>
        <active>true</active>
        <label>recordtype2 for twin obj1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>